[tool.poetry]
name = "eoss-observe"
version = "0.1.0"
description = ""
authors = ["TieWay59 <tieway59@foxmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
requests = "^2.31.0"
polars = "^0.20.2"
altair = "^5.2.0"
vega-datasets = "^0.9.0"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
